quick select plus quick copy plus styling

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-   
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-    <title>React App</title>
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/3/39/Naruto_Shiki_Fujin.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;600&display=swap" rel="stylesheet">
+    <title>NinJipsum</title>
   </head>
   <body>
   
